디자인 수정 custom.css <h4> font 적용

--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -21,10 +21,10 @@ tr th:last-child {
 }
 h5 {
 	font-family : 'Noto Sans KR';
-	font-size : 15px
+	font-size : 15px;
 }
 h4 {
-	font-family : 'Nato Sans KR';
+	font-family : 'Noto Sans KR';
 }
 h3 {
 	font-family : 'Hanna';
